fix(style): add gap

--- a/src/components/atoms/Text/H1/index.module.scss
+++ b/src/components/atoms/Text/H1/index.module.scss
@@ -3,10 +3,11 @@
 .h1 {
   color: c.$color-text-primary;
   font-family: "Signika Negative", sans-serif;
-  font-size: 42px;
+  font-size: 36px;
   line-height: 1.2;
 
   @include c.mq-pc {
+    font-size: 42px;
     line-height: 1.5;
   }
 }
